# pbrt-rust

./: .gitignore  Cargo.toml  README.md  killeroo-floor.json  pbrt_parser.py  render_all.sh
.github/workflows/: build-and-test.yml  build.yml  build_and_render.yml  build_and_render_debug_f32.yml  build_and_render_release_f64.yml  build_and_run.yml  build_and_test.yml  render_test_scene.sh  rust.yml
rendering_samples/: convert_ppm_to_png.py
src/: cameras.rs  film.rs  filter.rs  group.rs  image.rs  intersection.rs  lib.rs  main.rs  pbrt.rs  perspective_camera.rs  point.rs  primitive.rs  ray.rs  ray_casting_integrator.rs  renderer.rs  scene_builder.rs  square_matrix.rs  transform.rs  triangle.rs  vector.rs
src/accelerator/: bvh.rs
src/accelerators/: bvh.rs  bvh_node.rs
src/base/: bsdf.rs  bxdf.rs  camera.rs  cameras.rs  film.rs  filter.rs  integrator.rs  interaction.rs  light.rs  light_sampler.rs  material.rs  medium.rs  mod.rs  primitive.rs  ray.rs  rgb_color.rs  sampler.rs  shape.rs  shape_intersection.rs  spectrum.rs  texture.rs
src/bxdfs/: coated_diffuse.rs  dielectric.rs  diffuse.rs  diffuse_bxdf.rs  layered.rs  mod.rs  top_or_bottom.rs
src/cameras/: depth_of_field.rs  perspective.rs
src/core/: aabb_bounds.rs  accurate_float.rs  bounding_box.rs  bounds.rs  camera.rs  color.rs  configuration.rs  error_float.rs  group.rs  instance.rs  integrator.rs  interaction.rs  interfaces.rs  intersection.rs  material.rs  matrix.rs  mod.rs  normal.rs  orthonormal_basis.rs  pbrt.rs  point.rs  primitive.rs  random.rs  ray.rs  renderer.rs  sampler.rs  scene.rs  shape.rs  (+4 more)
(+297 files in other folders)
