[package]
name = "pbrt-minus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
num_cpus = "1.0"
fma = "0.1.0"
rand = "0.8.0"
rand_distr = "0.4.0"
image = "0.24.6"
ply-rs = "0.1.3"

[[bin]]
name = "pbrt-minus"
path = "src/bin/main.rs"
