[package]
name = "pbrt-minus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
flate2 = "1.0.27"
fma = "0.1.0"
image = "0.24.6"
num_cpus = "1.0"
ply-rs = "0.1.3"
rand = "0.8.0"
rand_distr = "0.4.0"
rayon = "1.7"
serde_json = "1.0"

[[bin]]
name = "pbrt-minus"
path = "src/bin/main.rs"

[features]
use_f64 = []
